I have change some links in the homepage

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 	<head>
-		<title>郭艳军的那些事儿</title>
+		<title>栖于兰亭</title>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="keywords" content="TinyJay, tinyjay, 郭艳军的那些事儿, 郭艳军的博客, 郭艳军, 一月筠, @一月筠" />
-		<meta name="description" content="๑۩ﺴ ﺴ۩๑ 透过指尖目视锦瑟流年，邂逅一场繁华的悸动..." />
+		<meta name="keywords" content="天朗气清，恵风和畅！" />
+		<meta name="description" content="我对自己的要求很低，我会在这个世界上，无非想明白一些道理，遇见一些有趣的事..." />
 		<!--加载textillate文字特效库-->
 		<link rel="stylesheet" href="assets/animate.css">
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -68,9 +68,9 @@
 					<div align="center">
 						<img src="css/images/portrait.jpg" style="width:100px; height:100px; border-radius:50%; overflow:hidden;" />
 					</div>
-					<!--<h2>一月筠</h2>-->
-					<font class="text1" style="text-align: center; text-decoration: none; color: white; font: '微软雅黑'; font-size: 24px;">一月筠</font>
-					<p class="text3" align="center">透过指尖目视锦瑟流年 邂逅一场繁华的悸动</p>
+					<!--<h2>一恵风</h2>-->
+					<font class="text1" style="text-align: center; text-decoration: none; color: white; font: '微软雅黑'; font-size: 24px;">一恵风</font>
+					<p class="text3" align="center">我对自己的要求很低，我会在这个世界上，无非想明白一些道理，遇见一些有趣的事...</p>
 					<nav>
 						<ul>
 							<li>
@@ -88,6 +88,8 @@
 						</ul>
 					</nav>
 				</header>
+
+<!--
 				<footer id="footer">
 					<div style="text-align:center;">
 						Powered by GuoYanjun
@@ -99,6 +101,8 @@
 						</span>
 					</div>
 				</footer>
+-->
+
 			</div>
 		</div>
 	</body>
