--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 					<p class="text3" align="center">我对自己的要求很低，我会在这个世界上，无非想明白一些道理，遇见一些有趣的事...</p>
 					<nav>
 						<ul>
-							<li>
-								<a href="http://guoyanjun.top/blog/" class="fa  fa-pencil-square-o" style="color:mediumspringgreen"><span>Blog</span></a>
+							<li> 
+                                                                <p>这是一段测试的代码</>
+								<a href="http:s//sxllxs.github.io/blog/" class="fa  fa-pencil-square-o" style="color:mediumspringgreen"><span>Blog</span></a>
 							</li>
 							<li>
 								<a href="https://github.com/tinyjay" class="fa fa-github"><span>Github</span></a>
